# pientertain

./: CMakeLists.txt  README.md  colorconversion.cpp  colorconversion.hh  hueauthentication.cpp  hueauthentication.hh  huestream.cpp  huestream.hh  light.cpp  light.hh  lightgroup.cpp  lightgroup.hh  lightpacket.cpp  lightpacket.hh  main.cpp  pientertain.cpp  pientertain.hh  raspicaminterfacedummy.cpp  raspicaminterfacedummy.h  restserver.cpp  restserver.hh  videosource.cpp  videosource.hh  videosourceimage.cpp  videosourceimage.hh  videosourceraspberrycam.cpp  videosourceraspberrycam.hh
raspicaminterface/: CMakeLists.txt  raspicaminterface.cpp  raspicaminterface.h  raspicaminterface_global.h  testinterface.cpp
scripts/: pientertain  start-pientertain  stop-pientertain
